fixed two broken links
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5943 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Jamoma/documentation/html/credits.html
+++ b/Jamoma/documentation/html/credits.html
@@ -53,7 +53,6 @@
 							</p>
 								<li>
 									<a bitly="BITLY_PROCESSED" href="http://bek.no/">BEK - Bergen Center for Electronic Arts</a>
-
 								</li>
 								<li>
 									<a bitly="BITLY_PROCESSED" href="http://electrotap.com/">Electrotap</a>
@@ -64,7 +63,7 @@
 
 
 							<p>
-								and has received support from
+								and has received support through
 							</p>
 
 								<li>
@@ -105,7 +104,7 @@
 								</li>
 								<li>
 
-									<a bitly="BITLY_PROCESSED" href="" http:="" www.fourms.uio.no="">University of Oslo</a>
+									<a bitly="BITLY_PROCESSED" href="http://www.fourms.uio.no">University of Oslo</a>
 								</li>
 
 	
@@ -131,7 +130,7 @@
 		<p>Not to forget...</p>
 
 		
-			<p>The OSC implementation of namespcae for the <a href="modules/jmod.vst~.html">VST module</a> is based on <a href="http://opensoundcontrol.org/VST">ideas</a> suggested by <i>M. Zbyszynski and A. Freed: <a href="http://www.cnmat.berkeley.edu/ICMC2005/ICMC_mzed6.html">Control of VST Plug-ins using OSC</a>. Proceedings of the ICMC 2005.</I> The interface for the module was partly inspired by the brilliant <a href="http://www.cycling74.com/products/radial">Radial</a> application.</p>
+			<p>The OSC implementation of namespcae for the <a href="modules/jmod.vst~.html">VST module</a> is based on <a href="http://opensoundcontrol.org/VST">ideas</a> suggested by <i>M. Zbyszynski and A. Freed: <a href="http://archive.cnmat.berkeley.edu/ICMC2005/ICMC_mzed6.html">Control of VST Plug-ins using OSC</a>. Proceedings of the ICMC 2005.</I> The interface for the module was partly inspired by the brilliant <a href="http://www.cycling74.com/products/radial">Radial</a> application.</p>
 
 			
 
