used the wrong stats in the previous commit
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@5950 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Jamoma/documentation/html/credits.html
+++ b/Jamoma/documentation/html/credits.html
@@ -23,21 +23,21 @@
 			- not to mention our tinkering with each other's code!</p>
 			
 		<h3>Core Developers</h3>
-		<p>In order of the  <a bitly="BITLY_PROCESSED" href="https://www.ohloh.net/p/jamoma/contributors?page=1&query=&sort=commits">amount of commits</a> to the Jamoma repository, Jamoma is what it is through:</p>
+		<p>In order of the  <a bitly="BITLY_PROCESSED" href="https://www.ohloh.net/p/jamoma/contributors">amount of commits</a> to the Jamoma repository, Jamoma is what it is through:</p>
 
-			<h4>Tim Place <small>(1660)</small> </h4>
+			<h4>Tim Place <small>(4133)</small> </h4>
 			
-			<h4>Trond Lossius <small>(1596)</small></h4>  
+			<h4>Trond Lossius <small>(3113)</small></h4>  
 			
-			<h4>Nils Peters <small>(738)</small></h4>
+			<h4>Nils Peters <small>(1471)</small></h4>
 			
-			<h4>Pascal Baltazar <small>(549)</small></h4> 
+			<h4>Pascal Baltazar <small>(1099)</small></h4> 
 			
-			<h4>Alexander Refsum Jensenius <small>(545)</small></h4>
+			<h4>Alexander Refsum Jensenius <small>(1064)</small></h4>
 
-			<h4>Dave Watson <small>(292)</small></h4> 			
+			<h4>Dave Watson <small>(614)</small></h4> 			
 
-			<h4>Theo de la Hogue <small>(147)</small></h4>
+			<h4>Theo de la Hogue <small>(294)</small></h4>
 
 		<h3>Additional Contributions</h3>
 		<p>Ideas, advices, code, tutorials, modules for the UserLib, etc...</p>
