--- a/Jamoma/modules/video/fluoride%/jmod.fluoride%.html
+++ b/Jamoma/modules/video/fluoride%/jmod.fluoride%.html
@@ -45,7 +45,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionRampFunction"> none </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Specify the red green and blue components for the glowing color. The range for each component should be between 0.0 and 1.0. </td>
+			<td class ="instructionDescription"> Specify the red green and blue components for the glowing color (RGB). The range for each component should be between 0.0 and 1.0. </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> luminance </td>
