--- a/Jamoma/modules/video/input%/jmod.input%.html
+++ b/Jamoma/modules/video/input%/jmod.input%.html
@@ -21,7 +21,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 	<p> Module Type: <code> video </code> <br>
 	Algorithm Type: <code> jitter </code> </p>
 	<p>Interface Size: <code> 1U-half </code> </p>
-	<p>Number of signal inlets: <code> 0 </ code> <br/>
+	<p>Number of signal inlets: <code> 1 </ code> <br/>
 	Number of signal outlets: <code> 1 </code> </p>
 	<h3> Parameters </h3>
 	<table>
@@ -37,15 +37,15 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td> /description </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> camera/active </td>
+			<td class="instructionName"> active </td>
 			<td class ="instructionType"> boolean </td>
 			<td class ="instructionRangeBounds"> 0 1 </td>
-			<td class ="instructionRangeClipmode"> none </td>
+			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive"> none </td>
 			<td class ="instructionRampFunction"> none </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Turn camera on </td>
+			<td class ="instructionDescription"> Turn video noise on or off </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> camera/camera </td>
@@ -92,17 +92,6 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDescription"> Update rate of the camera, in milliseconds </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> desktop/active </td>
-			<td class ="instructionType"> boolean </td>
-			<td class ="instructionRangeBounds"> 0 1 </td>
-			<td class ="instructionRangeClipmode"> both </td>
-			<td class ="instructionRampDrive"> none </td>
-			<td class ="instructionRampFunction"> none </td>
-			<td class ="instructionDataspace"> none </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Turn jit.desktop on or off </td>
-		<tr>
-		<tr>
 			<td class="instructionName"> desktop/offset/x </td>
 			<td class ="instructionType"> integer </td>
 			<td class ="instructionRangeBounds"> 0 640 </td>
@@ -125,17 +114,6 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDescription">  y value of the upper right corner of the desktop crop </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> desktop/rate </td>
-			<td class ="instructionType"> integer </td>
-			<td class ="instructionRangeBounds"> 2 1000 </td>
-			<td class ="instructionRangeClipmode"> low </td>
-			<td class ="instructionRampDrive"> scheduler </td>
-			<td class ="instructionRampFunction"> linear </td>
-			<td class ="instructionDataspace"> none </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Metro speed for jit.desktop </td>
-		<tr>
-		<tr>
 			<td class="instructionName"> desktop/size/x </td>
 			<td class ="instructionType"> integer </td>
 			<td class ="instructionRangeBounds"> 1 640 </td>
@@ -156,17 +134,6 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
 			<td class ="instructionDescription"> x size of desktop crop </td>
-		<tr>
-		<tr>
-			<td class="instructionName"> file/active </td>
-			<td class ="instructionType"> boolean </td>
-			<td class ="instructionRangeBounds"> 0 1 </td>
-			<td class ="instructionRangeClipmode"> none </td>
-			<td class ="instructionRampDrive"> none </td>
-			<td class ="instructionRampFunction"> none </td>
-			<td class ="instructionDataspace"> none </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Turn video on or off </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> file/framedump </td>
@@ -268,17 +235,6 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDescription"> List of RGB colors </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> synth/noise/active </td>
-			<td class ="instructionType"> boolean </td>
-			<td class ="instructionRangeBounds"> 0 1 </td>
-			<td class ="instructionRangeClipmode"> both </td>
-			<td class ="instructionRampDrive"> none </td>
-			<td class ="instructionRampFunction"> none </td>
-			<td class ="instructionDataspace"> none </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Turn video noise on or off </td>
-		<tr>
-		<tr>
 			<td class="instructionName"> synth/noise/planes </td>
 			<td class ="instructionType"> integer </td>
 			<td class ="instructionRangeBounds"> 1 4 </td>
@@ -288,17 +244,6 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
 			<td class ="instructionDescription"> Number of matrix planes </td>
-		<tr>
-		<tr>
-			<td class="instructionName"> synth/noise/rate </td>
-			<td class ="instructionType"> integer </td>
-			<td class ="instructionRangeBounds"> 2 1000 </td>
-			<td class ="instructionRangeClipmode"> low </td>
-			<td class ="instructionRampDrive"> scheduler </td>
-			<td class ="instructionRampFunction"> linear </td>
-			<td class ="instructionDataspace"> none </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Metro speed for noise </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> synth/noise/size/x </td>
@@ -321,6 +266,17 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
 			<td class ="instructionDescription"> y size of noise matrix </td>
+		<tr>
+		<tr>
+			<td class="instructionName"> updaterate </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 1 100 </td>
+			<td class ="instructionRangeClipmode"> low </td>
+			<td class ="instructionRampDrive"> none </td>
+			<td class ="instructionRampFunction"> none </td>
+			<td class ="instructionDataspace"> none </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> Update rate in milliseconds </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> video/freeze </td>
@@ -450,6 +406,17 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td> /description </td>
 		<tr>
 		<tr>
+			<td class="instructionName"> camera/close </td>
+			<td class ="instructionType"> generic </td>
+			<td class ="instructionRangeBounds"> 0.000000 1.000000 </td>
+			<td class ="instructionRangeClipmode"> none </td>
+			<td class ="instructionRampDrive"> none </td>
+			<td class ="instructionRampFunction"> none </td>
+			<td class ="instructionDataspace"> none </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> Open the camera grabber </td>
+		<tr>
+		<tr>
 			<td class="instructionName"> camera/direct </td>
 			<td class ="instructionType"> generic </td>
 			<td class ="instructionRangeBounds"> 0.000000 1.000000 </td>
@@ -461,15 +428,15 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDescription"> Direct access to the embedded jit.qt/dx.grab object </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> camera/grabber </td>
+			<td class="instructionName"> camera/open </td>
 			<td class ="instructionType"> generic </td>
 			<td class ="instructionRangeBounds"> 0.000000 1.000000 </td>
 			<td class ="instructionRangeClipmode"> none </td>
 			<td class ="instructionRampDrive"> none </td>
 			<td class ="instructionRampFunction"> none </td>
 			<td class ="instructionDataspace"> none </td>
-			<td class ="instructionRepetitionsAllow"> 1 </td>
-			<td class ="instructionDescription"> Direct access to the grab object </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> Open the camera grabber </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> camera/settings </td>
@@ -514,6 +481,28 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Direct access to the embedded jit.qt.movie object </td>
+		<tr>
+		<tr>
+			<td class="instructionName"> file/start </td>
+			<td class ="instructionType"> generic </td>
+			<td class ="instructionRangeBounds"> 0.000000 1.000000 </td>
+			<td class ="instructionRangeClipmode"> none </td>
+			<td class ="instructionRampDrive"> none </td>
+			<td class ="instructionRampFunction"> none </td>
+			<td class ="instructionDataspace"> none </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> Open the camera grabber </td>
+		<tr>
+		<tr>
+			<td class="instructionName"> file/stop </td>
+			<td class ="instructionType"> generic </td>
+			<td class ="instructionRangeBounds"> 0.000000 1.000000 </td>
+			<td class ="instructionRangeClipmode"> none </td>
+			<td class ="instructionRampDrive"> none </td>
+			<td class ="instructionRampFunction"> none </td>
+			<td class ="instructionDataspace"> none </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> Open the camera grabber </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> init </td>
