--- a/Jamoma/modules/video/plur%/jmod.plur%.html
+++ b/Jamoma/modules/video/plur%/jmod.plur%.html
@@ -38,14 +38,14 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> colormode </td>
-			<td class ="instructionType"> integer </td>
-			<td class ="instructionRangeBounds"> 0 2 </td>
-			<td class ="instructionRangeClipmode"> both </td>
+			<td class ="instructionType"> string </td>
+			<th class = "instructionRangeBounds"> N/A </td>
+			<td class ="instructionRangeClipmode"> none </td>
 			<td class ="instructionRampDrive"> none </td>
 			<td class ="instructionRampFunction"> none </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> colormode determines how jit.plur handles values that exceed the hi and lo values. 0 = wrap. 1 = clip. 2 = bounce </td>
+			<td class ="instructionDescription"> colormode determines how jit.plur handles values that exceed the hi and lo values. wrap | clip | bounce </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> gang </td>
@@ -56,7 +56,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionRampFunction"> none </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> when gang is on (default) x_ and y_range values are ignored - using the x_ and y_step values instead. </td>
+			<td class ="instructionDescription"> when gang is on (default) x/range and y/range values are ignored - using the x/step  and y/step values instead. </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> mode </td>
@@ -191,7 +191,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDescription"> The size of the module's UI. </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> x_range </td>
+			<td class="instructionName"> x/range </td>
 			<td class ="instructionType"> integer </td>
 			<td class ="instructionRangeBounds"> 0 1 </td>
 			<td class ="instructionRangeClipmode"> none </td>
@@ -199,10 +199,10 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionRampFunction"> linear </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> x_ and y_range represent the distance between the actual points used for the 'interpolation' calculation. </td>
+			<td class ="instructionDescription"> x/range and y/range range represent the distance between the actual points used for the 'interpolation' calculation. </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> x_step </td>
+			<td class="instructionName"> x/step </td>
 			<td class ="instructionType"> integer </td>
 			<td class ="instructionRangeBounds"> 0 1 </td>
 			<td class ="instructionRangeClipmode"> none </td>
@@ -210,10 +210,10 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionRampFunction"> linear </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> x_ and y_step represent the distance between the 'corners' between which the 'interpolation' takes place. </td>
+			<td class ="instructionDescription"> x/step and y/step represent the distance between the 'corners' between which the 'interpolation' takes place. </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> y_range </td>
+			<td class="instructionName"> y/range </td>
 			<td class ="instructionType"> integer </td>
 			<td class ="instructionRangeBounds"> 0 1 </td>
 			<td class ="instructionRangeClipmode"> none </td>
@@ -221,10 +221,10 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionRampFunction"> linear </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> x_ and y_range represent the distance between the actual points used for the 'interpolation' calculation. </td>
+			<td class ="instructionDescription"> x/range and y/range represent the distance between the actual points used for the 'interpolation' calculation. </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> y_step </td>
+			<td class="instructionName"> y/step </td>
 			<td class ="instructionType"> integer </td>
 			<td class ="instructionRangeBounds"> 0 1 </td>
 			<td class ="instructionRangeClipmode"> none </td>
@@ -232,7 +232,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionRampFunction"> linear </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> x_ and y_step represent the distance between the 'corners' between which the 'interpolation' takes place. </td>
+			<td class ="instructionDescription"> x/step and y/step represent the distance between the 'corners' between which the 'interpolation' takes place. </td>
 		<tr>
 	</table>
 
