--- a/Jamoma/modules/video/input%/jmod.input%.html
+++ b/Jamoma/modules/video/input%/jmod.input%.html
@@ -147,18 +147,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDescription"> Turn on or off framedump of the video </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> file/loop </td>
-			<td class ="instructionType"> boolean </td>
-			<td class ="instructionRangeBounds"> 0 1 </td>
-			<td class ="instructionRangeClipmode"> none </td>
-			<td class ="instructionRampDrive"> none </td>
-			<td class ="instructionRampFunction"> none </td>
-			<td class ="instructionDataspace"> none </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Turn looping on or off </td>
-		<tr>
-		<tr>
-			<td class="instructionName"> file/loop_points </td>
+			<td class="instructionName"> file/loop/bounds </td>
 			<td class ="instructionType"> array </td>
 			<th class = "instructionRangeBounds"> N/A </td>
 			<td class ="instructionRangeClipmode"> none </td>
@@ -167,6 +156,17 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
 			<td class ="instructionDescription"> List of low and high loop point values </td>
+		<tr>
+		<tr>
+			<td class="instructionName"> file/loop/mode </td>
+			<td class ="instructionType"> boolean </td>
+			<td class ="instructionRangeBounds"> 0 1 </td>
+			<td class ="instructionRangeClipmode"> none </td>
+			<td class ="instructionRampDrive"> none </td>
+			<td class ="instructionRampFunction"> none </td>
+			<td class ="instructionDataspace"> none </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> 0: no looping | 1: looping on | 2: palindrom  </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> file/open </td>
@@ -463,7 +463,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 			<td class="instructionName"> file/counter </td>
 			<td class ="instructionType"> integer </td>
-			<td class ="instructionRangeBounds"> 0 100000 </td>
+			<td class ="instructionRangeBounds"> 0 259138 </td>
 			<td class ="instructionRangeClipmode"> low </td>
 			<td class ="instructionRampDrive"> none </td>
 			<td class ="instructionRampFunction"> none </td>
