adding header line to link to the other html pages

--- a/Jamoma/documentation/html/index.html
+++ b/Jamoma/documentation/html/index.html
@@ -13,8 +13,9 @@
 	<div id="jmod_header">
 	<img src="../graphics/jmodular.icon.png" width="128" height="128">
 	<h1>jamoma</h1>
-	<h2>a modular standard for max, msp, and jitter</h2>
-	<p>&nbsp;</p>
+	<h2>a modular standard for max, msp, and jitter</h2> 
+	<h6><a href="index.html">Table of Contents</a> | <a href="modules.html">Index of Modules</a> | <a href="credits.html">Credits</a> | <a href="http://www.jamoma.org/">Jamoma.org</a></h6>
+	
 	</div>
 
 
