--- a/Jamoma/documentation/html/credits.html
+++ b/Jamoma/documentation/html/credits.html
@@ -12,6 +12,7 @@
 	<img src="../graphics/jmodular.icon.png" width="128" height="128">
 	<h1>jamoma</h1>
 	<h2>credits and acknowledgements </h2>
+    <h6><a href="index.html">Table of Contents</a> | <a href="modules.html">Index of Modules</a> | <a href="credits.html">Credits</a> | <a href="http://www.jamoma.org/">Jamoma.org</a></h6>
 
 	<h6>&nbsp;</h6>
 </div>
