--- a/Jamoma/modules/control/spacenavigator/jmod.spacenavigator.html
+++ b/Jamoma/modules/control/spacenavigator/jmod.spacenavigator.html
@@ -14,7 +14,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 	<img src="../../../documentation/graphics/jmodular.icon.png" width="128" height="128">
 	<h1> jmod.spacenavigator </h1>
 	<h2> Use the Space Navigator from 3D Connexion </h2>
-	<h6><a href="../../../documentation/html/index.html">Table of Contents</a> | <a href="../modules/">Index of Modules</a> | <a href="http://jamoma.org/">Jamoma.org</a></h6>
+	<h6><a href="../../../documentation/html/index.html">Table of Contents</a> | <a href="../../../documentation/html/modules.html">Index of Modules</a> | <a href="../../../documentation/html/credits.html">Credits</a> | <a href="http://pledgie.com/campaigns/5615">Donate</a> | <a href="http://www.jamoma.org/">Jamoma.org</a></h6>
 	</div>
 
 	<h3> Configuration </h3>
@@ -347,7 +347,7 @@ Number of signal outlets: <code> 0 </code> </p>
 		<tr>
 		<tr>
 			<td class="instructionName"> cooked/button/left </td>
-			<td class ="instructionType"> integer </td>
+			<td class ="instructionType"> boolean </td>
 			<td class ="instructionRangeBounds"> 0 1 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive">  </td>
@@ -358,7 +358,7 @@ Number of signal outlets: <code> 0 </code> </p>
 		<tr>
 		<tr>
 			<td class="instructionName"> cooked/button/right </td>
-			<td class ="instructionType"> integer </td>
+			<td class ="instructionType"> boolean </td>
 			<td class ="instructionRangeBounds"> 0 1 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive">  </td>
@@ -386,7 +386,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Cooked X position from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
@@ -397,7 +397,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Cooked Y position from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
@@ -408,41 +408,52 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Cooked Z position from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> cooked/rotation/x </td>
+			<td class="instructionName"> cooked/position </td>
+			<td class ="instructionType"> array </td>
+			<th class = "instructionRangeBounds"> N/A </td>
+			<td class ="instructionRangeClipmode"> none </td>
+			<td class ="instructionRampDrive">  </td>
+			<td class ="instructionRampFunction">  </td>
+			<td class ="instructionDataspace">  </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> XYZ position </td>
+		<tr>
+		<tr>
+			<td class="instructionName"> cooked/rotation/pitch </td>
 			<td class ="instructionType"> decimal </td>
 			<td class ="instructionRangeBounds"> -1.000000 1.000000 </td>
 			<td class ="instructionRangeClipmode"> none </td>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Cooked X rotation from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
-			<td class="instructionName"> cooked/rotation/y </td>
+			<td class="instructionName"> cooked/rotation/roll </td>
 			<td class ="instructionType"> decimal </td>
 			<td class ="instructionRangeBounds"> -1.000000 1.000000 </td>
 			<td class ="instructionRangeClipmode"> none </td>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Cooked Y rotation from the 3D Connexion Space Navigator </td>
-		<tr>
-		<tr>
-			<td class="instructionName"> cooked/rotation/z </td>
-			<td class ="instructionType"> decimal </td>
-			<td class ="instructionRangeBounds"> -1.000000 1.000000 </td>
-			<td class ="instructionRangeClipmode"> none </td>
-			<td class ="instructionRampDrive">  </td>
-			<td class ="instructionRampFunction">  </td>
-			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Cooked Z rotation from the 3D Connexion Space Navigator </td>
+		<tr>
+		<tr>
+			<td class="instructionName"> cooked/rotation/yaw </td>
+			<td class ="instructionType"> decimal </td>
+			<td class ="instructionRangeBounds"> -1.000000 1.000000 </td>
+			<td class ="instructionRangeClipmode"> none </td>
+			<td class ="instructionRampDrive">  </td>
+			<td class ="instructionRampFunction">  </td>
+			<td class ="instructionDataspace">  </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
+			<td class ="instructionDescription"> Cooked Yaw rotation from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> raw/Rx </td>
@@ -452,7 +463,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Raw X rotation from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
@@ -463,7 +474,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Raw Y rotation from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
@@ -474,7 +485,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Raw Z rotation from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
@@ -485,7 +496,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Raw X position from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
@@ -496,7 +507,7 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Raw Y position from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
@@ -507,12 +518,12 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionRampDrive">  </td>
 			<td class ="instructionRampFunction">  </td>
 			<td class ="instructionDataspace">  </td>
-			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionRepetitionsAllow"> 1 </td>
 			<td class ="instructionDescription"> Raw Z position from the 3D Connexion Space Navigator </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> raw/leftButton </td>
-			<td class ="instructionType"> integer </td>
+			<td class ="instructionType"> boolean </td>
 			<td class ="instructionRangeBounds"> 0 1 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive">  </td>
@@ -523,7 +534,7 @@ Number of signal outlets: <code> 0 </code> </p>
 		<tr>
 		<tr>
 			<td class="instructionName"> raw/rightButton </td>
-			<td class ="instructionType"> integer </td>
+			<td class ="instructionType"> boolean </td>
 			<td class ="instructionRangeBounds"> 0 1 </td>
 			<td class ="instructionRangeClipmode"> both </td>
 			<td class ="instructionRampDrive">  </td>
