--- a/Jamoma/modules/video/input%/jmod.input%.html
+++ b/Jamoma/modules/video/input%/jmod.input%.html
@@ -136,6 +136,17 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDescription"> x size of desktop crop </td>
 		<tr>
 		<tr>
+			<td class="instructionName"> file/autostart </td>
+			<td class ="instructionType"> integer </td>
+			<td class ="instructionRangeBounds"> 0 2 </td>
+			<td class ="instructionRangeClipmode"> both </td>
+			<td class ="instructionRampDrive"> none </td>
+			<td class ="instructionRampFunction"> none </td>
+			<td class ="instructionDataspace"> none </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> Defines module's behavior when 'file/open' is received. When set to 0, reading of a video file is triggered with 'file/start'. When set to 1 (default), opening a video file automatically triggers 'file/start'. When set to 2, opening a video file automatically triggers 'file/start', only if a file was previously being read. </td>
+		<tr>
+		<tr>
 			<td class="instructionName"> file/framedump </td>
 			<td class ="instructionType"> boolean </td>
 			<td class ="instructionRangeBounds"> 0 1 </td>
@@ -463,7 +474,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 			<td class="instructionName"> file/counter </td>
 			<td class ="instructionType"> integer </td>
-			<td class ="instructionRangeBounds"> 0 100000 </td>
+			<td class ="instructionRangeBounds"> 0 840 </td>
 			<td class ="instructionRangeClipmode"> low </td>
 			<td class ="instructionRampDrive"> none </td>
 			<td class ="instructionRampFunction"> none </td>
@@ -491,7 +502,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionRampFunction"> none </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Open the camera grabber </td>
+			<td class ="instructionDescription"> Start reading of the video file </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> file/stop </td>
@@ -502,7 +513,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionRampFunction"> none </td>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Open the camera grabber </td>
+			<td class ="instructionDescription"> Stop reading of the video file </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> init </td>
