renaming jmod.sur.multi.input~ to jmod.sur.input~

--- a/Max/documentation/html/modules.html
+++ b/Max/documentation/html/modules.html
@@ -346,7 +346,7 @@ caption{font-size:11px;font-style:italic;}
 				<td class="instructionDescription"> A module to distribute a multicable to three receivers </td>
 			</tr>
 			<tr>
-				<td class=instructionName><a href=../../modules/spatialization/sur.multi.input~/jmod.sur.multi.input~.html>jmod.sur.multi.input~</a></td>
+				<td class=instructionName><a href=../../modules/spatialization/sur.input~/jmod.sur.input~.html>jmod.sur.input~</a></td>
 				<td class="instructionDescription"> Playback of multichannel audiofiles based on sfplay </td>
 			</tr>
 			<tr>
