renaming jmod.sur.multi.aux~ to jmod.sur.aux~

--- a/Max/documentation/html/modules.html
+++ b/Max/documentation/html/modules.html
@@ -342,7 +342,7 @@ caption{font-size:11px;font-style:italic;}
 				<td class="instructionDescription"> A multichannel meterbridge </td>
 			</tr>
 			<tr>
-				<td class=instructionName><a href=../../modules/spatialization/sur.multi.aux~/jmod.sur.multi.aux~.html>jmod.sur.multi.aux~</a></td>
+				<td class=instructionName><a href=../../modules/spatialization/sur.aux~/jmod.sur.aux~.html>jmod.sur.aux~</a></td>
 				<td class="instructionDescription"> A module to distribute a multicable to three receivers </td>
 			</tr>
 			<tr>
