correcting license info

--- a/Max/documentation/html/index.html
+++ b/Max/documentation/html/index.html
@@ -36,7 +36,7 @@
 		<p>The primary documentation for Jamoma is the <a href="interface_guidelines.html">JIG</a>.  This document contains the specifications for all Jamoma (or Jamoma-Compliant) modules. </p>
 		
 <h3>License</h3>
-		<p>Jamoma is licensed as open source software under the terms of the <a href="http://www.gnu.org/licenses/lgpl.html">GNU LPGL</a>.</p>
+		<p>Jamoma is licensed as open source software under the terms of the "New BSD License".</p>
 		
 <h3>External Sites</h3>
 		<p>Jamoma's user resources are hosted by <a href="http://www.bek.no/">BEK</a> at <a href="http://jamoma.org/">jamoma.org</a>. </p>
